--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,7 +8,7 @@
     <!-- Load some resources only in development environment -->
     <% } %>
   </head>
-  <body>
+  <body style="width: 450px; height: 500px;">
     <div id="app"></div>
     <script src="popup.js"></script>
   </body>
